Change List of Users for Registered users

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       <h3>Endpoints</h3>
       <ul>
         <li>
-          <a href="./user">List of Users</a>
+          <a href="./user">Registered users</a>
         </li>
       </ul>
     </section>
