Add danceCourse files

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
         <li>
           <a href="./user">Registered users</a>
         </li>
+
+        <li>
+          <a href="./danceCourse">DanceCourse List</a>
+        </li>
       </ul>
     </section>
   </main>
