--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="main.css">
   <title>Alex & Melanie | Back-end</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
 
   <main>
     <section>
-      <h3>Endpoints</h3>
+      <h3>Endpoints:</h3>
       <ul>
         <li>
           <a href="./user">Registered users</a>
