Change background render

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <h1>Alex & Melanie</h1>
-    <h2>Kevin van der Schans | ISDI CODERS</h2>
+    <h2>Kevin Schans | ISDI CODERS</h2>
   </header>
 
   <main>
