Change index styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,22 @@
 <body>
 
   <header>
-    <h1>Alex & Melanie</h1>
-    <h2>Kevin Schans | ISDI CODERS</h2>
+    <h1 class="title">Alex & Melanie</h1>
+    <h2 class="subtitle">Kevin Schans | ISDI CODERS</h2>
   </header>
 
   <main>
     <section>
-      <h3>Endpoints:</h3>
-      <ul>
-        <li>
-          <a href="./user">Registered users</a>
+      <h3 class="endpoints">Endpoints:</h3>
+
+      <ul class="list">
+
+        <li class="list-item">
+          <a class="list-button" href="./user">Registered users</a>
         </li>
 
-        <li>
-          <a href="./danceCourse">DanceCourse List</a>
+        <li class="list-item">
+          <a class="list-button" href="./danceCourse">DanceCourse List</a>
         </li>
       </ul>
     </section>
